--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <title>My Shelf</title>
+  <head>
+    <meta charset="utf-8"  />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" /> 
+    <title>My Shelf</title>
+  </head>
     <div id="root"></div>
 </html>
